--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 xcuserdata/
 DerivedData/
 .swiftpm/configuration/registries.json
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+/.swiftpm/xcode
 .netrc
 /.vscode
